--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     <div class="container px-lg-5">
         <div class="row mx-lg-n5">
-            <div class="col py-3 px-lg-5 border bg-light"><img src="WhatsApp Image 2020-12-03 at 7.01.23 PM.png" alt="" width="350" height="350"></div>
+            <div class="col py-3 px-lg-5 border bg-light"><img src="/profile.png" alt="" width="350" height="350"></div>
             <div class="col py-3 px-lg-5 border bg-light">
                 <h3 class="Name">I'm Shriyash Jadhav</h3>
                 <h4>
@@ -233,7 +233,7 @@
 
     </div>
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="card">
 
                 <div class="card-body">
@@ -249,7 +249,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="card">
                 <div class="card-body">
 
@@ -264,7 +264,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="card">
                 <div class="card-body">
 
@@ -279,7 +279,22 @@
                 </div>
             </div>
         </div>
+        <div class="col-sm-3">
+            <div class="card">
 
+                <div class="card-body">
+
+                    <style>
+                        .card {
+                            align-items: center;
+                        }
+                    </style>
+                    <img src="https://www.vhv.rs/dpng/d/313-3133777_javascript-transparent-background-svg-hd-png-download.png" width="60" height="50" alt="C logo">
+
+                    <h5 class="card-title">JavaScript</h5>
+                </div>
+            </div>
+        </div>
     </div>
     <style>
         .row {
@@ -287,7 +302,7 @@
         }
     </style>
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="card">
                 <div class="card-body">
 
@@ -302,7 +317,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="card">
                 <div class="card-body">
 
@@ -317,7 +332,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="card">
                 <div class="card-body">
 
@@ -328,11 +343,26 @@
                     </style>
                     <img src="https://download.logo.wine/logo/Bootstrap_(front-end_framework)/Bootstrap_(front-end_framework)-Logo.wine.png" width="90" height="55" alt="C++ logo">
 
-                    <h5 class="card-title">Bootstrap </h5>
+                    <h5 class="card-title">Bootstrap</h5>
                 </div>
             </div>
         </div>
+        <div class="col-sm-3">
+            <div class="card">
 
+                <div class="card-body">
+
+                    <style>
+                        .card {
+                            align-items: center;
+                        }
+                    </style>
+                    <img src="https://banner2.cleanpng.com/20180604/pol/kisspng-react-javascript-angularjs-ionic-atom-5b154be6709500.6532453515281223424611.jpg" width="90" height="50" alt="C logo">
+
+                    <h5 class="card-title">React</h5>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="section-title" id="ContactMeid">
